refactor: update SQL query conditions and use getFirst() method